# QCloudMusicApi

./: .gitmodules  BINDINGS.md  CMakeLists.txt  LICENSE  README.md  conanfile.txt  config.h  crypto.hpp  main.cpp  module.h  request.hpp
.github/workflows/: macos.yml  ubuntu.yml  windows-mingw.yml  windows.yml
ApiServer/: CMakeLists.txt  generateconfig.h  logger.cpp  logger.h  main.cpp  server.cpp  server.h  tabcommon.h
CApi/: CMakeLists.txt  capi.cpp  capi.h  capi.py
QCloudMusicApi/: CMakeLists.txt  api_c.cpp  api_c.h  apihelper.cpp  apihelper.h  crypto.hpp  global.h  main.cpp  module.cpp  module.h  plugins.cpp  plugins.h  qcloudmusicapiplugin.h  request.cpp  request.h  request.hpp
QCloudMusicApi/example/: Program.cs  capi.py  main.rs
QCloudMusicApi/example/QCMPlugin/: CMakeLists.txt  api.cpp  api.h  aplugin.cpp  aplugin.h
QCloudMusicApi/util/: config.h  crypto.cpp  crypto.h  crypto.hpp  index.cpp  index.h  logger.cpp  logger.h  option.cpp  option.h  request.cpp  request.h  util_global.h
Test/: CMakeLists.txt  config.json  config.qrc  logger.cpp  logger.h  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  servicelocator.cpp  servicelocator.h  tabaes.cpp  tabapitest.cpp  tabapitest.h  tabapitest.ui  tabrsa.cpp
Test/commonwidget/: tabaes.cpp  tabapitest.cpp  tabapitest.h  tablogin_cellphone.h  tablogin_cellphone.ui  tabrsa.h  tabrsa.ui
Test/customwidget/: tabaes.cpp  tabaes.h  tabaes.ui  tabapi_c.cpp  tabapi_c.h  tabapi_c.ui  tabapitest.cpp  tabapitest.h  tabavatar_upload.cpp  tabavatar_upload.h  tabavatar_upload.ui  tabcommon.cpp  tabcommon.h  tabcommon.ui  tabcommonunit.cpp  tabcommonunit.h  tabcommonunit.ui  tablogin_cellphone.cpp  tablogin_cellphone.h  tablogin_cellphone.ui  tablogin_qr.cpp  tablogin_qr.h  tablogin_qr.ui  tabplaylist_cover_update.cpp  tabplaylist_cover_update.h  tabplaylist_cover_update.ui  tabplugin.cpp  tabplugin.h  tabplugin.ui  tabrsa.cpp  tabrsa.h  tabservertest.cpp  tabservertest.h  tabservertest.ui
doc/: API.md  BINDINGS.md
